--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -7,7 +7,7 @@
     <mat-card-content>
       <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
         <mat-form-field appearance="outline" class="full-width">
-          <mat-labeùl>Email</mat-labeùl>
+          <mat-label>Email</mat-label>
           <input matInput formControlName="email" type="email">
           <mat-icon matSuffix>email</mat-icon>
 
