--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -48,10 +48,10 @@
           </mat-error>
         </mat-form-field>
 
-        <button mat-raised-button color="primary"
+        <button mat-raised-button
                 type="submit"
                 [disabled]="!registerForm.valid"
-                class="full-width">
+                class="full-width green-btn">
           S'inscrire
         </button>
       </form>
@@ -59,7 +59,7 @@
 
     <mat-card-actions>
       <span>Vous avez déjà un compte ? </span>
-      <a mat-button color="primary" routerLink="/login">Se connecter</a>
+      <a mat-button color="primary" routerLink="/login" class="text">Se connecter</a>
     </mat-card-actions>
   </mat-card>
 </div>
