--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -118,7 +118,7 @@ body {
 
 /* Variables (pour référence) */
 :root {
-  --primary: #17cf54;
+  --primary: #01f856;
   --bg-light: #f6f8f6;
   --bg-dark: #112116;
   --text-dark: #1a1a1a;
