--- a/src/app/components/roomlist/roomlist.component.html
+++ b/src/app/components/roomlist/roomlist.component.html
@@ -1,47 +1,31 @@
 <div class="table-container">
   <div class="add-button-wrapper">
-    <button class="btn-add">+ Ajouter une Salle</button>
+    <button class="btn-add" (click)="addRoom()">+ Ajouter une Salle</button>
   </div>
 
   <table class="table table-striped custom-table">
     <thead>
     <tr>
-      <th scope="col">#</th>
-      <th scope="col">First</th>
-      <th scope="col">Last</th>
-      <th scope="col">Handle</th>
+      <th scope="col">Image</th>
+      <th scope="col">Name</th>
+      <th scope="col">Type</th>
+      <th scope="col">Capacity</th>
+      <th scope="col">Price</th>
+      <th scope="col">Available</th>
       <th scope="col">Action</th>
     </tr>
     </thead>
     <tbody>
-    <tr>
-      <th scope="row">1</th>
-      <td>Mark</td>
-      <td>Otto</td>
-      <td>@mdo</td>
+    <tr *ngFor="let room of rooms">
+      <td><img [src]="room.image" alt="{{room.name}}" class="room-image"></td>
+      <td>{{ room.name }}</td>
+      <td>{{ room.type }}</td>
+      <td>{{ room.capacity }}</td>
+      <td>{{ room.price }}</td>
+      <td>{{ room.isAvailable ? 'Yes' : 'No' }}</td>
       <td>
-        <button class="btn-action btn-delete">Supprimer</button>
-        <button class="btn-action btn-edit">Modifier</button>
-      </td>
-    </tr>
-    <tr>
-      <th scope="row">2</th>
-      <td>Jacob</td>
-      <td>Thornton</td>
-      <td>@fat</td>
-      <td>
-        <button class="btn-action btn-delete">Supprimer</button>
-        <button class="btn-action btn-edit">Modifier</button>
-      </td>
-    </tr>
-    <tr>
-      <th scope="row">3</th>
-      <td>Larry</td>
-      <td>the Bird</td>
-      <td>@twitter</td>
-      <td>
-        <button class="btn-action btn-delete">Supprimer</button>
-        <button class="btn-action btn-edit">Modifier</button>
+        <button class="btn-action btn-delete" (click)="deleteRoom(room.id!)">Supprimer</button>
+        <button class="btn-action btn-edit" (click)="editRoom(room.id!)">Modifier</button>
       </td>
     </tr>
     </tbody>
@@ -49,5 +33,4 @@
 
 
 </div>
-
 
